beginning circle line intersection code

--- a/nbs/practical-aspects.ipynb
+++ b/nbs/practical-aspects.ipynb
@@ -25,13 +25,11 @@
    "source": [
     "# Debugging\n",
     "\n",
-    "One of the most common things you do when creating a software package or solving a science problem is to debug your code.  I'm taking 'debug' in the \n",
+    "One of the most common things you do when creating a software package or solving a science problem is to debug your code.  I'm taking 'debug' in the sense of removing problems from your code.  So the natural place to begin is: how do you find bugs?\n",
     "\n",
-    "Tests\n",
-    "Simplest case\n",
-    "Bisect print\n",
-    "ipdb, %debug, Tracer()\n",
-    "break points, old school"
+    "### Finding bugs / Tests\n",
+    "\n",
+    "While the most natural way to find problems is to allow them to surface, this is not always the best practice.  Some issues are more subtle than you'd expect / appreciate at first glance.  That is why some people advocate for *test-driven* development. In this paradigm, you must write a battery of tests that cover the entire functionality of the code base.  "
    ]
   },
   {
@@ -41,7 +39,35 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def intersection_line_circle(line, circle):\n",
+    "    \"\"\"\n",
+    "    Find the intersection between line and circle using standard quadratic solution\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "        line : ndarray, list-like -> [2,2] or [N,2,2]\n",
+    "            A single line or collection of lines described by\n",
+    "            \n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "Tests\n",
+    "Simplest case\n",
+    "Bisect print\n",
+    "ipdb, %debug, Tracer()\n",
+    "break points, old school"
+   ]
   }
  ],
  "metadata": {
