add structure, data visualization sections

--- a/nbs/practical-aspects.ipynb
+++ b/nbs/practical-aspects.ipynb
@@ -13,8 +13,9 @@
     "* **Versioning** -- maintaining a consistent set of code with history\n",
     "* **Style** -- how you write your code influences its legibility\n",
     "* **Debugging** -- finding and fixing problems in your code\n",
-    "* **Structure** -- the structure of your code\n",
-    "* **Tools** -- choosing the right set of tools for the job"
+    "* **Structure** -- how your code is organized\n",
+    "* **Data** -- what you do with data / keeping data safe\n",
+    "* **Visualization** -- viewing your final product most effectively"
    ]
   },
   {
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -116,12 +117,17 @@
     "    --------\n",
     "        filtered_field : 3d ndarray [M,N,P]\n",
     "            The filtered, real-space field after applying the low-pass filter\n",
+    "            \n",
+    "    Examples:\n",
+    "    \n",
+    "    arr = np.random.rand((32,32,32))\n",
+    "    lowpass_filter_3d(np.random.rand(arr, 0.3))\n",
     "    \"\"\"\n",
     "    # take the FFT of the incoming data\n",
     "    qfield = np.fft.fftn(field)\n",
     "\n",
     "    # build an array of frequencies for each axis dimension,\n",
-    "    # broadcast them using a meshgrid, then taking the norm along the last axis\n",
+    "    # broadcast them using a meshgrid, then take the norm along the last axis\n",
     "    kval = [np.fft.fftfreq(i) for i in field.shape]\n",
     "    kvec = np.meshgrid(*kval, indexing='ij')\n",
     "    klen = np.sqrt((kvec**2).sum(axis=-1))\n",
@@ -169,6 +175,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Version 1:\n",
+    "\n",
+    "* Clear documentation string showing usage and describing inputs / outputs\n",
+    "* Separates ideas clearly: (a) Go to Fourier space (b) calculate k-vectors (c) apply filter (d) return to real-space\n",
+    "* Comments are clear and describe not what happens, but strange decisions made in the code\n",
+    "* Not very hard coded, list comprehension\n",
+    "\n",
+    "#### Version 2:\n",
+    "\n",
+    "* Un-readable, lines too long, no grouping of ideas\n",
+    "* Obscure functions where readable options exist\n",
+    "\n",
+    "#### Version 3:\n",
+    "\n",
+    "* Does not utilize whitespace well\n",
+    "* Comments don't actually say anything, just repeating code\n",
+    "* Tries to shorten lines but loses clarity in doing so (which function is already closed?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Debugging\n",
     "\n",
     "One of the most common things you do when creating a software package or solving a science problem is to debug your code.  I'm taking 'debug' in the sense of removing problems from your code.  So the natural place to begin is: how do you find bugs?\n",
@@ -179,8 +208,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example: chaotic scattering\n",
+    "\n",
+    "Chaos is very generic property of dynamical systems usually characterized by sensitivity to initial conditions, topological mixing, and many dense periodic orbits.  For example if you consider the path of light through a set of reflective balls, the trajectory of the light is very complex due to the non-analytic edges of the objects.  The image from such a setup creates a real-space fractal as seen below.  In fact, each color in the picture touches every other color even at their boundary (?!).\n",
+    "\n",
+    "![](wada2.jpg)\n",
+    "\n",
+    "Christmas ball fractal (src: http://www.evilmadscientist.com/2006/christmas-chaos/)\n",
+    "\n",
+    "To study this system, we essentially need to propogate light by finding the intersection of lines and circles (for the 2D case).  Such a function may look like:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -197,32 +241,8 @@
     "import matplotlib.pylab as pl\n",
     "import numpy as np\n",
     "import scipy as sp\n",
-    "%matplotlib"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Example: chaotic scattering\n",
+    "%matplotlib\n",
     "\n",
-    "Chaos is very generic property of dynamical systems usually characterized by sensitivity to initial conditions, topological mixing, and many dense periodic orbits.  For example if you consider the path of light through a set of reflective balls, the trajectory of the light is very complex due to the non-analytic edges of the objects.  The image from such a setup creates a real-space fractal as seen below.  In fact, each color in the picture touches every other color even at their boundary (?!).\n",
-    "\n",
-    "![](wada2.jpg)\n",
-    "\n",
-    "Christmas ball fractal (src: http://www.evilmadscientist.com/2006/christmas-chaos/)\n",
-    "\n",
-    "To study this system, we essentially need to propogate light by finding the intersection of lines and circles (for th 2D case).  Such a function may look like:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "def sgn(a):\n",
     "    \"\"\"\n",
     "    Return the sign of the argument (in contrast to np.sign)\n",
@@ -350,9 +370,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -366,7 +387,7 @@
       "OK\n",
       "........\n",
       "----------------------------------------------------------------------\n",
-      "Ran 8 tests in 0.015s\n",
+      "Ran 8 tests in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -377,7 +398,7 @@
        "<unittest.runner.TextTestResult run=8 errors=0 failures=0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,10 +478,12 @@
     "    \n",
     "Here, the `>>>` means to run this line and the next line is the expected output (as a string).  You can then run all documented tests with \n",
     "\n",
-    "    import doctest\n",
-    "    doctest.testmod()\n",
+    "    In [1]: import doctest, intersect\n",
+    "\n",
+    "    In [2]: doctest.testmod(intersect)\n",
+    "    Out[2]: TestResults(failed=0, attempted=10)\n",
     "    \n",
-    "### Test framework N\n",
+    "### Test framework N: the rest\n",
     "\n",
     "There are many other frameworks each with their pros and cons.  I've heard good things about nose, and py.test (very mixed here) but there is a very large number to [choose from](https://wiki.python.org/moin/PythonTestingToolsTaxonomy)"
    ]
@@ -475,14 +498,73 @@
     "\n",
     "After you have your tests set up, you will quickly find what is working and what isn't (aside from those side cases that you hadn't found before).  Now that you have a problem, how do you fix it?\n",
     "\n",
-    "First, you should \n",
+    "First, you should make the simplest case that reproduces the bug. This can be done by creating a small script that duplicates the issue or writing a small function that demonstrates the base problem.  \n",
     "\n",
-    "Tests\n",
-    "Simplest case\n",
     "Bisect print\n",
     "ipdb, %debug, Tracer()\n",
     "break points, old school"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Structure\n",
+    "\n",
+    "### Code smells\n",
+    "\n",
+    "Symptoms in code that hint at underlying organization problems.  A more complete list is on wiki [Code smell](https://en.wikipedia.org/wiki/Code_smell).  Some of these can be found using programs that read your code. However, if you keep these mind you will be forced to write better code.\n",
+    "\n",
+    "* **Duplicate / dead code** -- a few lines of code that is repeated everywhere should a new function or possibly a class.  remove dead code! (it's in VCS)\n",
+    "* **Bloat** -- a function or class has grown too large or takes too many parameters.  Is its purpose ill-defined? Taking on too much responsibility?\n",
+    "* **Coupling** -- classes are two closely linked / structure is getting in the way of progress?\n",
+    "\n",
+    "### Design Patterns / Anti-patterns\n",
+    "\n",
+    "These are common ways to deal with how data is handled / transformed in a program. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data\n",
+    "\n",
+    "Unless your code is for a simple one-off problem, you have to deal with data files at some point.  Most importantly, these files must have a **description**.  If you don't know what a data file contains or how it was created then what good is it?  Aside from a descriptive name, I recommend a few strategies for dealing with this:\n",
+    "\n",
+    "### readme.txt\n",
+    "\n",
+    "In each data directory, create a plain text file that describes the contents of each file in great detail including when it was last modified, what script was run, and any other notes.  Group similar files together in folders to decrease complexity.  Alternatively, a text file can be provided for each file e.g. \n",
+    "\n",
+    "    > ls\n",
+    "    phase-diagram-alpha-0.0-gamma-1.0.bin phase-diagram-alpha-0.0-gamma-1.0.bin.txt\n",
+    "\n",
+    "### Generating scripts\n",
+    "\n",
+    "One of the best methods for documenting how things were created is to produce a single script which can regenerate any data that you care about, including figures.  This way, if there is any question as to how something was made, you can always look back through VCS to see.  This does not replace the readme.txt.  Speaking of generating scripts, set your random number generator (RNG) seeds and record this seed!  That way, the exact result can be reproduced.\n",
+    "\n",
+    "### Backup\n",
+    "\n",
+    "Even when you have a script for generating data from scratch and a readme describing the data, you should still have a **backup**.  Sometimes VCS is appropriate for data files, other times standard backup strategies are more appropriate.  Choose one but do it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualization\n",
+    "\n",
+    "Enabling others to quickly and accurately understand your results is very important.  To that end, choosing the correct visualization strategy is key."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
