adding color rant

--- a/nbs/practical-aspects.ipynb
+++ b/nbs/practical-aspects.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Versioning\n",
+    "# ======== Versioning ========\n",
     "\n",
     "Hard drive space is cheap, your time is not.  As you work, keep track of changes and help others work with you on your project.  One of the easy ways to do this is by using a Version Control System (VCS).  Popular ones include:\n",
     "\n",
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Style\n",
+    "# ======== Style ========\n",
     "\n",
     "Being able to sit down and understand a code base quickly is important.  To make sure you play well with others, style is important.  Different companies, languages, and individuals have preferred styles.  Python is nice in that there is a well-defined style guide that everyone can use: [PEP8](https://www.python.org/dev/peps/pep-0008/). Some of the suggestions are a little out-dated so take with a grain of salt, but here are a few key points about formatting -\n",
     "\n",
@@ -198,13 +198,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Debugging\n",
+    "# ======== Debugging ========\n",
     "\n",
     "One of the most common things you do when creating a software package or solving a science problem is to debug your code.  I'm taking 'debug' in the sense of removing problems from your code.  So the natural place to begin is: how do you find bugs?\n",
     "\n",
     "## Finding bugs / Tests\n",
     "\n",
-    "While the most natural way to find problems is to allow them to surface, this is not always the best practice.  Some issues are more subtle than you'd expect / appreciate at first glance.  That is why some people advocate for *test-driven* development. In this paradigm, you must write a battery of tests that cover the entire functionality of the code base.  "
+    "While the most natural way to find problems is to allow them to surface, this is not always the best practice.  Direct visualization will often reveal problems since we are quite good at recognizing visual patterns.  Some issues are more subtle than you'd expect / appreciate at first glance.  That is why some people advocate for *test-driven* development. In this paradigm, you must write a battery of tests that cover the entire functionality of the code base.  "
    ]
   },
   {
@@ -509,7 +509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Structure\n",
+    "# ======== Structure ========\n",
     "\n",
     "### Code smells\n",
     "\n",
@@ -528,7 +528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data\n",
+    "# ======== Data ========\n",
     "\n",
     "Unless your code is for a simple one-off problem, you have to deal with data files at some point.  Most importantly, these files must have a **description**.  If you don't know what a data file contains or how it was created then what good is it?  Aside from a descriptive name, I recommend a few strategies for dealing with this:\n",
     "\n",
@@ -552,9 +552,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualization\n",
+    "# ======== Visualization ========\n",
     "\n",
-    "Enabling others to quickly and accurately understand your results is very important.  To that end, choosing the correct visualization strategy is key."
+    "Enabling others to quickly and accurately understand your results is very important.  To that end, choosing the correct visualization strategy is key.  The defaults especially for matplotlib are **not** good.  To permanently change the defaults for plotting, create a custom `matplotlibrc` file or monkey-patch the `rcParams` to load preferences that are better for professional plots.\n",
+    "\n",
+    "### Legibility\n",
+    "\n",
+    "The easiest thing to fix is to make the font family and sizes appropriate for your context.  Typically, font sizes should seem too big when you are viewing them on your screen.  This enables proper viewing during slideshows and publication.  \n",
+    "\n",
+    "### Colors\n",
+    "\n",
+    "You should try to attain a balance between clarity, pretty colors, being color-blind friendly, and black-and-white printable.  As a general rule, `jet` (the default in matplotlib) is not the colormap you are looking for.  Furthermore, the default color cycle is not ideal as well.  It does not print in black and white and does not respect color-blind.  \n",
+    "\n",
+    "### Lines and symbols\n",
+    "\n",
+    "\n",
+    "### "
    ]
   },
   {
